tests/NormalTests/paczka2/big_fuzzy/99518078.err
Error in line 1: MjGXwiY S20 16,1
Error in line 18: V1tgGE7Oc5 S20 84,9
Error in line 21: V1tgGE7Oc5 S528 11,0
Error in line 8: MjGXwiY A703 407,3
Error in line 26: V1tgGE7Oc5 S137 44,4
Error in line 56: MjGXwiY S20 62,7
Error in line 67: 4XvlM1 S137 -3,5
Error in line 69: 7R8hhl S20 89,1
Error in line 79: MjGXwiY S5<8 39,5
Error in line 80: 7R8hhl S20 72,6
Error in line 82: WuihTgw4 S20 38,5
Error in line 90: WuihTgw4 A703 72,2
Error in line 87: V1tgGE7Oc5 S528 71,2
Error in line 93: V1tgGE7Oc5 S20 79,5
Error in line 95: q1mJIir S137 49,1
Error in line 63: 4XvlM1 S137 82,4
Error in line 102: 4XvlM1 S20 134,3
Error in line 113: 7R8hhl S137 3,4
Error in line 125: 7R8hhl A793 46,8
Error in line 126: 7R8hhl A703 171,8
Error in line 136: V1tgGE7Oc5 S20 85,0
Error in line 134: WuihTgw4 S528 29,9
Error in line 143: WuihTgw4 S20 81,3
Error in line 163: q1mJIir S137 71,80
Error in line 166: 4XvlM1 S137 7,7
Error in line 174: 4XvlM1 S137 94,7
Error in line 179: S528 S137 53,3
Error in line 180: S528 A703 96,0
Error in line 158: WuihTgw4 S528 106,6
Error in line 164: q1mJIir S137 39,8
Error in line 183: WuihTgw4 S20 61,4
Error in line 188: 4XvlM1 A703 36,6
Error in line 195: WuihTgw4 S528 42,6
Error in line 203: V1tgGE7Oc5 S137 70,8
Error in line 207: MjGXwiY S137 30,7
Error in line 220: 4XvlM1 S528 206,5
Error in line 221: 4XvlM1 A703 61,9
Error in line 204: V1tgGE7Oc5 A703 68,9
Error in line 234: MjGXwiY S137 52,0
Error in line 241: S528 A703 79,0
